# wx-config-msys2

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  utilslib.project  wx-config-Win32.workspace  wx-config-msys2.project  wx-config-msys2.workspace  wx-config.project
.github/workflows/: msys2.yml
src/: .clang-format  CMakeLists.txt  utils.cpp  utils.hpp  wx-config-msys2.cpp  wx-config.cpp
